# cpm-lab

./: .gitignore  .gitlab-ci.yml  .gitmodules  DoxygenMainpage.hpp  Doxygen_software_files.hpp  LICENSE  Readme-FastDDS.md  Readme.md  build_all.bash  discovery_server_setup.md  doxygen_config  doxygen_notes.md  install.sh  install_eprosima_on_nuc.bash  matlab_setup.sh
cpm_lib/: CMakeLists.txt  Doxygen_cpm_bash_descriptions.hpp  Toolchain.cmake  XML_profile.xml  build.bash  build_arm.bash  ddsgen.bash
cpm_lib/dds_idl/: CommonroadObstacle.idl  HlcCommunication.idl  LaneGraphTrajectory.idl  Parameter.idl  VehicleCommandDirect.idl  VehicleCommandPathTracking.idl  VehicleCommandSpeedCurvature.idl  VehicleCommandTrajectory.idl  VehicleObservation.idl  VehicleState.idl  Visualization.idl
cpm_lib/include/cpm/: AsyncReader.hpp  Constants.hpp  DebugFilter.hpp  Filesystem.hpp  HLCCommunicator.hpp  InternalConfiguration.hpp  Logging.hpp  MultiVehicleReader.hpp  ParameterReceiver.hpp  Participant.hpp  ParticipantSingleton.hpp  RTTTool.hpp  Reader.hpp  ReaderAbstract.hpp  ReaderParent.hpp  Timer.hpp  TimerFD.hpp  TypeObjects.hpp  VehicleIDFilteredTopic.hpp  Writer.hpp  get_time_ns.hpp  get_topic.hpp  type_creation_helper.hpp
cpm_lib/matlab_mex_bindings/: PathPoint.m  Pose2D.m  README.md  README_MATLAB.md  ReadyStatus.m  SystemTrigger.m  TrajectoryPoint.m  VehicleCommandDirect.m  VehicleCommandPathTracking.m  VehicleCommandSpeedCurvature.m  VehicleCommandTrajectory.m  VehicleObservation.m  VehicleState.m  VehicleStateList.m  build_mex.bash  mex_test.cpp  mex_test_eprosima.cpp  ready_signal_writer.cpp  ready_status_writer.cpp  systemTriggerReader.m  system_trigger_reader.cpp  test.m  vehicleStateListReader.m  vehicle_command_direct_writer.cpp  vehicle_command_path_tracking_writer.cpp  vehicle_command_speed_curvature_writer.cpp  vehicle_command_trajectory_writer.cpp  vehicle_state_list_reader.cpp
cpm_lib/src/: HLCCommunicator.cpp  InternalConfiguration.cpp  Logging.cpp  ParameterReceiver.cpp  Participant.cpp  ParticipantSingleton.cpp  RTTTool.cpp  SimpleTimer.cpp  TimeMeasurement.cpp  TimerFD.cpp  TimerSimulated.cpp  TimerSimulated.hpp  type_creation_helper.cpp
cpm_lib/test/: QOS_TEST.xml  catch.cpp  catch.hpp  test_AsyncReader.cpp  test_CommandLineReader.cpp  test_HLCCommunicator.cpp  test_InternalConfiguration.cpp  test_MultiVehicleReader.cpp  test_Participant.cpp  test_Reader.cpp  test_ReaderAbstract.cpp  test_VehicleIDFilteredTopic.cpp  test_Writer.cpp  test_logging.cpp  test_parameter.cpp  test_rtt.cpp  test_simple_timer.cpp  test_simple_timer_stop.cpp  test_timer.cpp  test_timer_simulated.cpp  test_timer_start_again.cpp  test_timer_stop.cpp  test_timer_stop_running.cpp
cpm_lib/test_apps/: EprosimaTopicListener.cpp  MatlabEprosimaReceiveTest.cpp  MatlabEprosimaWriteTest.cpp  test_read_contentfiltered.cpp  test_shm_reader.cpp  test_shm_writer.cpp  test_write_contentfiltered.cpp
eprosima_recorder/: CMakeLists.txt  ReadmeTopicListener.md  build.bash
eprosima_recorder/include/: PublishedTopicsListener.hpp  RecorderManager.hpp  TopicRecorder.hpp
eprosima_recorder/src/: PublishedTopicsListener.cpp  main.cpp
high_level_controller/: Doxygen_hlc_bash_descriptions.hpp  environment_variables.bash  hlc_start.bash
high_level_controller/autostart/: CMakeLists.txt  create_nuc_package.bash  dummy_program_check.bash  lab_autostart.bash  test_receiver.bash
high_level_controller/autostart/src/: main.cpp  test_receiver.cpp
high_level_controller/autostart/src_error_logger/: main.cpp
high_level_controller/examples/cpp/controller_test_loop/: CMakeLists.txt
high_level_controller/examples/cpp/controller_test_loop/src/: main.cpp  main_platoon.cpp  test_loop_trajectory.hpp
high_level_controller/examples/cpp/diagonal_figure_eight/: CMakeLists.txt
high_level_controller/examples/cpp/diagonal_figure_eight/src/: main.cpp
high_level_controller/examples/cpp/distributed_routing/: CMakeLists.txt
high_level_controller/examples/cpp/distributed_routing/src/: VehicleTrajectoryPlanner.cpp  VehicleTrajectoryPlanner.hpp  VehicleTrajectoryPlanningState.hpp  lane_graph_tools.hpp  main.cpp
high_level_controller/examples/cpp/dynamic_priorities/: CMakeLists.txt  build.bash  ddsgen.bash
high_level_controller/examples/cpp/dynamic_priorities/src/: VehicleTrajectoryPlanner.cpp  VehicleTrajectoryPlanner.hpp  VehicleTrajectoryPlanningState.cpp  VehicleTrajectoryPlanningState.hpp  lane_graph_tools.hpp  main.cpp  simulation.cpp
high_level_controller/examples/cpp/dynamic_priorities/src/dds_idl/: FallbackSync.idl  FutureCollisionAssessment.idl  Trajectory.idl
indoor_positioning_system/: CMakeLists.txt  run_basler.bash  run_ips.bash
indoor_positioning_system/src/: IpsPipeline.cpp  IpsPipeline.hpp  PoseCalculation.hpp  UndistortPoints.hpp  main_ips_pipeline.cpp  main_led_detection.cpp
indoor_positioning_system/test/: test_cleanup.cpp
lab_control_center/: CMakeLists.txt  Doxygen_lcc_file_descriptions.hpp  parameters.yaml  run.bash
lab_control_center/bash/: download_all_logs.bash  environment_variables.bash  matlab_eprosima_preload.bash  remote_start.bash  tmux_script.bash
lab_control_center/labcam/: CMakeLists.txt
lab_control_center/src/: GoToPlanner.hpp  HLCReadyAggregator.hpp  LogLevelSetter.hpp  LogStorage.cpp  LogStorage.hpp  ObstacleAggregator.hpp  ObstacleSimulation.cpp  ObstacleSimulation.hpp  ObstacleSimulationManager.cpp  ObstacleSimulationManager.hpp  ParameterServer.cpp  ParameterServer.hpp  ParameterStorage.cpp  ParameterWithDescription.hpp  ProgramExecutor.cpp  RTTAggregator.hpp  TimeSeries.hpp  TimeSeriesAggregator.cpp  main.cpp  (+11 more)
mid_level_controller/: CMakeLists.txt  Doxygen_mlc_file_descriptions.hpp  build.bash
middleware/: CMakeLists.txt  Doxygen_middleware_file_descriptions.hpp  QOS_LOCAL_COMMUNICATION.xml.template  build.bash  run.bash
middleware/src/: Communication.hpp  TypedCommunication.cpp  TypedCommunication.hpp  main.cpp
middleware/test/: test_goals_to_hlc.cpp  test_hlc_to_vehicle.cpp  test_middleware_to_hlc.cpp  test_vehicle_read.cpp  test_vehicle_to_middleware.cpp
(+99 files in other folders)
